1. Disabled zoom in when using mobile 2. Disabled tooltips in mobile devices as its bugged. 3. Fixed some navbar issue on mobiles when opening the user menu there was a ugly border. * Maybe more commit is coming if the problem in nitai phone not fixed.

--- a/src/app/core/components/bs-navbar/bs-navbar.component.css
+++ b/src/app/core/components/bs-navbar/bs-navbar.component.css
@@ -4,6 +4,7 @@
 }
 
 .active-link-buttons {
+  background-color: #23272B !important;
   color: #ffbc00 !important;
 }
 
@@ -69,6 +70,9 @@ hr {
   .dropdown-menu {
     font-size: 90%;
     margin-left: -60px;
+  } 
+  .navbar { 
+    border-bottom: none;
   }
 }
 @media screen and (max-width: 415px) and (min-height: 480px) and (max-height: 737px)
@@ -76,5 +80,8 @@ hr {
   .dropdown-menu {
     font-size: 85%;
     margin-left: -60px;
+  }
+  .navbar { 
+    border-bottom: none;
   }
 }
